finish go fish and ask players